--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,13 +1,9 @@
 body {
-    margin: 0px;
-    background-color: blanchedalmond;
+    margin: 30px;
+    background-color: lightgrey;
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: ;
-}
-
-table, th, td {
-    border: 1px solid black;
 }
 
 table {
@@ -16,17 +12,20 @@ table {
     background-color: white;
 }
 
-th, td {
+th {
     min-width: 100px;
     padding: 10px;
+    background-color: darkgrey;
+}
+
+td, th {
+    min-width: 100px;
+    padding: 10px;
+    border-bottom: 1px solid lightgrey;
 }
 
 .complete {
     background-color: rgb(133, 221, 1);
-}
-
-.incomplete {
-    background-color: lightsalmon;
 }
 
 .taskName {
@@ -35,13 +34,33 @@ th, td {
 
 .taskDescription {
     font-size: 16px;
+    max-width: 300px;
+}
+
+.form-floating {
+    width: 600px;
+}
+
+#submitBtn {
+    margin: 0 0 20px 0;
+}
+
+#nameInput {
+    width: 200px;
+}
+
+#descriptionInput {
+    width: 600px;
+    margin: 0 0 20px 0;
 }
 
 #inputFields {
-    margin: 20px;
+    margin: auto;
+    width: 600px;
 }
 
-#completeTaskBtn {
+.completeTaskBtn {
     background-color: green;
+    margin: 0 5px 0 0;
 }
 
